@@ -1,8 +1,9 @@
 # All changes to data.tree are documented here.
 
 ## Version 0.3.0
-- IMPROVE: FormatFixedDecimal and FormatPercent work for NULL values
 - ADD: ToDataFrameTypeCol to export e.g. the path to columns by level
+- ADD: Node$AddSibling
+- IMPROVE: FormatFixedDecimal and FormatPercent work for NULL values
 - ADD: Node$RemoveAttribute now contains a mandatory parameter so that it works also if the node does not have the attribute to be removed.
 - FIX: Removed ... parameter from ToListExplicit and ToListSimple 
 
